--- a/Use Case/Readme
+++ b/Use Case/Readme
@@ -1,2 +1,7 @@
 Contains Use Case diagrams, documentations, and descriptions.
 For the project Virtual Art Gallery.
+Latest version is 1.2.
+- Use Case Admin
+- Use Case Buying
+- Use Case Navigating Home Page after Login
+- Register
