--- a/Use Case/Readme
+++ b/Use Case/Readme
@@ -1,7 +1,8 @@
 Contains Use Case diagrams, documentations, and descriptions.
 For the project Virtual Art Gallery.
-Latest version is 1.2.
+Latest version is 1.2. (Latest)
 - Use Case Admin
 - Use Case Buying
 - Use Case Navigating Home Page after Login
 - Register
+- Use Case Description V1.1 (Latest)
